--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,213 @@
-.App {
+.App{
   text-align: center;
+  background-color: #272626;
+  font-family: Arial, sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.background{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 100vh;
+  background-color: #e26767;
+  background-image: url('https://media.istockphoto.com/id/1460731539/vector/illustration-background-of-a-soft-and-cute-universe-in-pastel-colors.jpg?s=612x612&w=0&k=20&c=LeVBXvDSSHpiLK1dt12sMV2MeLuWaRP20Vaa2s-l4X0=');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.dark .background{
+  background-image: url('https://images.unsplash.com/photo-1626553683558-dd8dc97e40a4?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+}
+.login-container{
+  width: 80%;
+  max-width: 600px;
+  height: 75vh;
+  padding: 20px;
+  border: 2px solid black;
+  border-radius: 20px;
+  box-shadow: 0 4px 30px black;
+  background: blur(10px);
+}
+.dark .login-container{
+  border: 2px solid rgba(228, 241, 243, 0.89);
+  box-shadow: 0 4px 30px rgba(228, 241, 243, 0.89);
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.login-container label{
+  font-size: 1.2rem;
+  margin-top: 10px;
+  font-weight: bolder;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.login-container h2{
+  color: #180101;
+  font-size: 50px;
+  margin-bottom: 20px;
+}
+.dark .login-container h2{
+  color: #f0f0f0;
+}
+.login-container p{
+  color: #1e0101;
+  font-size: 1.2rem;
+  margin-bottom: 20px;
+}
+.dark .login-container p{
+  color: #f0f0f0;
+}
+.login-container input{
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  font-size: 1rem;
+  box-sizing: border-box;
+  
+}
+.dark .login-container input{
+  border: 1px solid #ccc;
+  background-color: #1f0940;
+  color: #f0f0f0;
+}
+.login-container .login-button{
+  width: 100%;
+  padding: 10px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-top: 20px;
+}
+.login-container .login-button:hover{
+  background-color: #45a049;
+}
+.login-container .login-button:disabled{
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+.login-container .login-button:disabled:hover{
+  background-color: #ccc;
+}
+.login-container .error{
+  color: red;
+  font-size: 1rem;
+  margin-bottom: px;
+}
+.link{
+  color: #04169b;
+  text-decoration: none;
+  font-size: 1.2rem;
+  margin-top: 10px;
+  cursor: pointer;
+}
+.dark .link{
+  color: rgb(185, 213, 238);
+}
+.link:hover{
+  text-decoration: underline;
+}
+.dashboard-container{
+  width: 80%;
+  height: 75vh;
+  max-width: 600px;
+  padding: 20px;
+  border: 2px solid rgba(0,0,0,0.2);
+  border-radius: 10px;
+  box-shadow: 0 4px 30px rgba(0,0,0,0.2);
+  background: blur(10px);
+}
+.dark .dashboard-container{
+  border: 2px solid rgba(228, 241, 243, 0.89);
+  box-shadow: 0 4px 20px rgba(228, 241, 243, 0.89);
+  color: white;
+}
+.dashboard-container h1{
+  color: #180101;
+  font-size: 50px;
+  margin-bottom: 20px;
+}
+.dark .dashboard-container h1{
+  color: #f0f0f0;
+}
+.dashboard-container p{
+  color: #1e0101;
+  font-size: 1.2rem;
+  margin-bottom: 20px;
+}
+.dark .dashboard-container p{
+  color: #f0f0f0;
+}
+.dashboard-container .dashboard-button{
+  width: 100%;
+  padding: 10px;
+  background-color: #c838d8;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-top: 20px;
+}
+.dashboard-container .dashboard-button:hover{
+  background-color: #b32bc2;
+  transition: .3s ease;
+  transform: scale(1.025);
+}
+.dark .dashboard-container .dashboard-button{
+  background-color: #c838d8;
+  color: white;
+}
+.dashboard-container label{
+  color: #1e0101;
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+  font-weight: bolder;
+}
+.dark .dashboard-container label{
+  color: #f0f0f0;
+}
+.dashboard-container textarea{
+  width: 100%;
+  height: 100px;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  font-size: 1rem;
+  box-sizing: border-box;
+}
+.dark .dashboard-container textarea{
+  border: 1px solid #ccc;
+  background-color: #1f0940;
+  color: #f0f0f0;
+}
+.toggle-theme-button{
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  padding: 10px;
+  background-color: #525cee;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  box-shadow: #180101 0px 0px 5px 0px;
+  border: 1px solid #180101;
+}
+.dark .toggle-theme-button{
+  background-color: #555fe3;
+  color: white;
+  box-shadow: #f0f0f0 0px 0px 5px 0px;
+  border: 1px solid #f0f0f0;
+}
+.toggle-theme-button:hover{
+  background-color: #4444d1;
+  transition: .3s ease;
+  transform: scale(1.025);
 }
